# parallel-conduits-old

./: .gitignore  Makefile  README.md  parallel-conduits.cabal
docs/: ParConduit.dia  duplicate.dia  fuse.dia  fuseLeft.dia  fuseM.dia  fuseS.dia  fuseWith.dia  heads.dia  merge.dia  mergeEither.dia  parallel.dia  routeThese.dia  split.dia  splitThese.dia  splitTuple.dia  tails.dia
src/Data/Conduit/: Parallel.hs
src/Data/Conduit/Parallel/Internal/: Copy.hs  Duct.hs  Lazy.hs  Spawn.hs  Types.hs  Utils.hs
src/Data/Conduit/Parallel/Internal/Arrow/: Create.hs  Multiple.hs  Type.hs  Utils.hs
src/Data/Conduit/Parallel/Internal/Conduit/: Cache.hs  Create.hs  Fuse.hs  Parallel.hs  Portal.hs  Route.hs  Run.hs  Type.hs
src/Data/Conduit/Parallel/Internal/Duct/: Create.hs  No.hs  Read.hs  Utils.hs  Write.hs
test/: Functor.hs  Fuse.hs  Main.hs  Parallel.hs  Route.hs  Util.hs
