name:                parallel-conduits
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bhurt/parallel-conduits#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           BSD
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Flag Devel
    Description:       Development build (enable warnings and less optimization)
    Default:           False

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Parallel
                        , Data.Conduit.Parallel.Internal.Conduit.Create
                        , Data.Conduit.Parallel.Internal.Conduit.Fuse
                        , Data.Conduit.Parallel.Internal.Conduit.Parallel
                        , Data.Conduit.Parallel.Internal.Conduit.Route
                        , Data.Conduit.Parallel.Internal.Conduit.Run
                        , Data.Conduit.Parallel.Internal.Conduit.Type
                        , Data.Conduit.Parallel.Internal.Copy
                        , Data.Conduit.Parallel.Internal.Duct
                        , Data.Conduit.Parallel.Internal.Duct.Create
                        , Data.Conduit.Parallel.Internal.Duct.No
                        , Data.Conduit.Parallel.Internal.Duct.Utils
                        , Data.Conduit.Parallel.Internal.Duct.Write
                        , Data.Conduit.Parallel.Internal.Lazy
                        , Data.Conduit.Parallel.Internal.Spawn
                        , Data.Conduit.Parallel.Internal.Utils
  build-depends:       base >= 4.7 && < 5
                        , conduit
                        , containers
                        , contravariant
                        , deepseq
                        , kan-extensions
                        , mtl
                        , profunctors
                        , selective
                        , stm
                        , these
                        , transformers
                        , unliftio
                        , unliftio-core
  default-language:    Haskell2010
  if flag(devel)
    ghc-options:       -O0
                        -W
                        -Weverything
                        -Wno-implicit-prelude
                        -Wno-missing-deriving-strategies
                        -Wno-missing-export-lists
                        -Wno-missing-import-lists
                        -Wno-missing-safe-haskell-mode
                        -Wno-prepositive-qualified-module
                        -Wno-safe
                        -Wno-unsafe
                        -Werror 
  else
    ghc-options:       -O2


source-repository head
  type:     git
  location: https://github.com/bhurt/parallel-conduits
